--- a/Comandapp/app/src/main/res/layout/activity_login.xml
+++ b/Comandapp/app/src/main/res/layout/activity_login.xml
@@ -68,6 +68,20 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/etIP"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_ip"
+                    android:imeOptions="actionUnspecified"
+                    android:inputType="text"
+                    android:maxLines="1"/>
+
+            </android.support.design.widget.TextInputLayout>
             <Button
                 android:id="@+id/btnSignin"
                 style="?android:textAppearanceSmall"
